# Notatio-Antiqua

./: .gitignore  Addon.ini  CMakeLists.txt  COPYING.txt  Info.plist  Makefile  Makefile.Debug  Makefile.Release  NaProg-de.qm  NaProg-de.ts  NaProg-en.qm  NaProg-en.ts  NaProg-fr.qm  NaProg-fr.ts  NotAntiq.pro  README  index.html  index.php  install.txt  main.cpp  naclefselect.cpp  naclefselect.h  naclefselect.ui  naheaderwizard.cpp  naheaderwizard.h  naheaderwizard.ui  nahelp.cpp  nahelp.h  nahelp.ui  namdi.cpp  namdi.h  naprog.cpp  naprog.h  naprog.qrc  naprog.ui  nasettings.cpp  nasettings.h  nasettings.ui  nasyntax.cpp  nasyntax.h  (+3 more)
addons/Example/: Addon.ini  Admin_Example.php  Gadget_Example.php  Special_Example.php
addons/Multi Site/: Addon.ini  Install_Check.php  SetupSite.php
debian/: README.source  docs  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  files  init.d.ex  manpage.1.ex  notantiq.substvars  postinst  postinst.ex  preinst.ex  prerm  prerm.ex
debian/debian/: changelog  control  manpage.sgml.ex  manpage.xml.ex  menu.ex  notantiq.cron.d.ex  notantiq.default.ex  notantiq.doc-base.EX  postrm.ex  watch.ex
debian/patches/: debian-changes-0.8b2-1  series
help/: helpindex-de.html
images/: notantiq.icns
include/: admin.php  common.php  main.php  special.php
include/admin/: admin_about.php  admin_addon_install.php  admin_addons.php  admin_addons_tool.php  admin_browser.html  admin_browser.php  admin_configuration.php  admin_display.php  admin_extra.php  admin_menu.php  admin_menu_tools.php  admin_missing.php  admin_permalinks.php  (+8 more)
(+168 files in other folders)
